# rag-med

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
.claude/: CLAUDE.md  PROGRESS.md
.claude/agents/: drift-auditor.md
.claude/commands/: check.md  progress.md
.claude/research/: architecture.md  decisions.md  glossary.md  summary.md  walkthrough.md
src/rag_med/: config.py
src/rag_med/indexing/: bm25_build.py  chunk.py  embed.py  faiss_build.py  pipeline.py
src/rag_med/indexing/ingest/: parse.py  pubmed.py
src/rag_med/serving/: retrieve.py
src/rag_med/shared/: db.py  models.py  tokenize.py
steps/: week1.md  week2.md
tests/: test_bm25_build.py  test_chunk.py  test_chunk_pipeline.py  test_config.py  test_db_schema.py  test_embed.py  test_faiss_build.py  test_parse.py  test_pipeline.py  test_retrieve.py  test_smoke_ingest.py  test_tokenize.py
tests/fixtures/: pmc_abstract_only.xml  pmc_full_text.xml  pmc_no_content.xml  pmc_no_title.xml
