[project]
name = "rag-med"
version = "0.0.1"
description = "Pneumology RAG with verifier-gated answers"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.5",
    "email-validator>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "pubmed-parser>=0.5",
    "structlog>=24.0",
]

[dependency-groups]
dev = ["ruff>=0.15", "pytest>=9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_med"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
